[Version 2.0] - Added product comp & Enhance

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
 <body style="background-color: black;">
   <app-root></app-root>
   <app-comic></app-comic>
+  <br>
+  <app-product></app-product>
+  <br>
 </body>
 </html>
